[package]
name = "flourish-extensions"
version = "0.1.0"
edition = "2021"

#TODO Badges, meta data

[dependencies]
ext-trait = { version = "1.0.1", default-features = false }
flourish = { path = "../flourish" }
flourish-extra = { path = "../flourish-extra" }
num-traits = { version = "0.2.19", default-features = false }
