[package]
name = "flourish"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#TODO Badges, meta data

[features]
global_signals_runtime = ["isoprenoid/global_signals_runtime"] # Implements `SignalsRuntimeRef` for `GlobalSignalsRuntime`.
_test = ["global_signals_runtime", "_docs"] # Internal testing feature.
_docs = ["global_signals_runtime"] # Internal documentations feature.

[dependencies]
futures-lite = { version = "2.3.0", default-features = false, features = ["alloc"] }
isoprenoid = { path = "../isoprenoid" }
pin-project = "1.1.5"
scopeguard = { version = "1.2.0", default-features = false }
