[package]
name = "flourish"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#TODO Badges, meta data

[features]
global_signals_runtime = ["isoprenoid/global_signals_runtime"] # Implements `SignalsRuntimeRef` for `GlobalSignalsRuntime`.
_test = ["global_signals_runtime", "_doc"] # Internal testing feature.
_doc = ["global_signals_runtime"] # Internal documentation feature.

[dependencies]
async-lock = { version = "3.4.0", default-features = false }
futures-lite = { version = "2.3.0", default-features = false, features = ["alloc"] }
isoprenoid = { path = "../isoprenoid" }
pin-project = "1.1.5"
tap = { version = "1.0.1", default-features = false }
