[package]
name = "flourish"
version = "0.1.3"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2021"
rust-version = "1.86"
description = "Convenient and full-featured signals for Rust."
# documentation intentionally defaulted.
readme = true
# homepage
repository = "https://github.com/Tamschi/flourish"
license = "MIT OR Apache-2.0"
keywords = ["async", "framework", "incremental", "runtime", "signals"]
categories = ["asynchronous", "caching", "concurrency"]

[package.metadata.docs.rs]
features = [ "_doc" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
global_signals_runtime = ["isoprenoid/global_signals_runtime"] # Implements `SignalsRuntimeRef` for `GlobalSignalsRuntime`.
_test = ["global_signals_runtime", "_doc"] # Internal testing feature.
_doc = ["global_signals_runtime"] # Internal documentation feature.

[dependencies]
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
futures-lite = { version = "2.3.0", default-features = false, features = ["alloc"] }
isoprenoid = { version = "0.1.2", path = "../isoprenoid" }
pin-project = "1.1.5"
tap = { version = "1.0.1", default-features = false }
