[package]
name = "isoprenoid"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#TODO Badges, meta data

[features]
global_signals_runtime = [] # Implements `SignalsRuntimeRef` for `GlobalSignalsRuntime`.
forbid_global_signals_runtime = [] # Ensure that `global_signals_runtime` is not enabled.

[dependencies]
async-lock = { version = "3.4.0", default-features = false, features = ["std"] }
futures-lite = { version = "2.3.0", default-features = false, features = ["alloc"] }
parking_lot = { version = "0.12.2", default-features = false }
scopeguard = { version = "1.2.0", default-features = false }
unwind_safe = { version = "0.1.0", default-features = false }
