[package]
name = "pollinate"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.18", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
pin-project = "1.1.5"
range-set-blaze = { version = "0.1.16", default-features = false, features = ["alloc"] }
