[package]
name = "pollinate"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash_hasher = { version = "2.0.3", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
parking_lot = { version = "0.12.2", default-features = false }
pin-project = "1.1.5"

[features]
std = []
